--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- Bestsellers -->
     <section class="section">
       <div class="section-head">
-        <h2 class="section-title">Bestsellers</h2>
+        <h2 class="section-title">Most loved</h2>
         <a class="section-link" href="products.html">Shop all</a>
       </div>
 
